@@ -57,7 +57,7 @@ public class RecordingJSONParser extends JSONParser{
     position = getPosition();
     // if reading a String , the getStringChars do not return the closing single quote or double quote
     //so, try to capture that
-    if(chars.getArray().length >=chars.getStart()+chars.size()) {
+    if(chars.getArray().length >chars.getStart()+chars.size()) {
       char next = chars.getArray()[chars.getStart() + chars.size()];
       if(next =='"' || next == '\'') {
         recordChar(next);
@@ -75,5 +75,9 @@ public class RecordingJSONParser extends JSONParser{
   public String getBuf() {
     if(sb != null) return sb.toString();
     return null;
+  }
+
+  public JSONParser.ParseException error(String msg) {
+    return err(msg);
   }
 }
